# environmental-sustainability-aqi-framework

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/power_npp/coal/: monthCoal1-2023-Apr.xls  monthCoal1-2023-Aug.xls  monthCoal1-2023-Dec.xls  monthCoal1-2023-Jul.xls  monthCoal1-2023-Jun.xls  monthCoal1-2023-May.xls  monthCoal1-2023-Nov.xls  monthCoal1-2023-Oct.xls  monthCoal1-2023-Sep.xls  monthCoal1-2024-Apr.xls  monthCoal1-2024-Feb.xls  monthCoal1-2024-Jan.xls  monthCoal1-2024-Mar.xls  monthImportCoal1-2024-Apr.xls  monthImportCoal1-2024-Feb.xls  monthImportCoal1-2024-Jan.xls  monthImportCoal1-2024-Mar.xls
data/raw/power_npp/thermal/: 18_col_act-5_2021-JAN.xls  18_col_act-5_2023-JAN.xls  18_col_act-6_2021-JAN.xls  18_col_act-6_2023-JAN.xls  18_col_act-7_2021-JAN.xls
