[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environmental-sustainability-aqi-framework"
version = "0.1.0"
description = "Reproducible explainable-AI framework for state-month AQI analysis in India using public government data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Venkata Arun Srinivas Nibhanupudi"}
]
dependencies = [
  "pandas>=2.1,<3.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.11,<2.0",
  "scikit-learn>=1.4,<2.0",
  "statsmodels>=0.14,<1.0",
  "matplotlib>=3.8,<4.0",
  "shap>=0.45,<1.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.31,<3.0",
  "openpyxl>=3.1,<4.0",
  "joblib>=1.3,<2.0"
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0,<2.0",
  "notebook>=7.0,<8.0",
  "pytest>=8.0,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
